--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <version>42.2.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.2.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
